cli/tests/testdata/error_syntax.js.out
error: Expected ,, got following at [WILDCARD]/error_syntax.js:3:5
